# filehunter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.toml  docker-compose.yml
.github/workflows/: release.yml
bench/: bench_modes.sh  results.md
src/: config.rs  lib.rs  main.rs  ratelimit.rs  server.rs
tests/: integration.rs
