[package]
name = "filehunter"
version = "0.4.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "High-performance multi-path file search HTTP server"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto"] }
http-body-util = "0.1.3"
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3.31"
bytes = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0"
mime_guess = "2.0.5"
percent-encoding = "2.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
